:bento: (lettres) correction
660313.LCM02.MOUL
660317.LCM02.MOUL.b

--- a/lettres.html
+++ b/lettres.html
@@ -5335,7 +5335,7 @@
     </article><article><h2 id='660313.LCM02.MOUL'>Lettre n° 660313.LCM02.MOUL<a href="https://beatricemundo.github.io/lettresmedicis6466/#660313.LCM02.MOUL">↑</a></h2><discours loc="CathMed" id="660313.LCM02.MOUL" date="1566-13mars">
     <p>Monsieur de Forquevauls, avecques ceste
       petite dernière despesche, j'ay resceu voz deux
-      lettres et entendu l'estat et disposifion de la
+      lettres et entendu l'estat et disposition de la
       royne ma fille, et comme, graces à Dieu,
       elle va de bien en mieux de sa groisse. Espérant
       que par Villeroy je seray plus avant advertie
@@ -5344,13 +5344,13 @@
       j'estime, luy seroint très nécessaires; vous
       priant continuer à me tenir souvent advertie
       de sa santé. Nous avons touts esté icy assaillis
-      d'une espèce de coqueiuche dont personne
-      n'a esté exempt,. et il y a sept ou huict jours
+      d'une espèce de coqueluche dont personne
+      n'a esté exempt, et il y a sept ou huict jours
       que le Roy monsieur mon fils et moy en gardons
       le lict et la chambre; qui n'a pas esté
       sans quelque peu de fievre causée de ce catarrhe;
       mais, Dieu mercy, nous en sommes
-      dehors et prets a partir pour.continuer nostre
+      dehors et prets a partir pour continuer nostre
       voyage d'Auvergne. Je ne fauldray, retourné
       que sera Villeroy, à faire que vous ayez un
       coulier de l'ordre, pour estre chose plus que
@@ -5371,176 +5371,176 @@
     
     </article><article><h2 id='660317.LCM02.MOUL.b'>Lettre n° 660317.LCM02.MOUL.b<a href="https://beatricemundo.github.io/lettresmedicis6466/#660317.LCM02.MOUL.b">↑</a></h2><discours loc="CathMed" id="660317.LCM02.MOUL.b" date="1566-17mars">
     </p>Monsieur de Forquevauls, avant que l'ambassadeur
-      d'Espaigne ait despesché son courrier,
-      est arrivé vostre premier paquet dont nostre
-      autre despesche fait mention, par où j'ay esté
-      bien particulierement advertie comme est passé
-      ce malheureux massacre faict à la Floride
-      et les propos que vous en a tenus le duc d'Albe
-      avecques la response que vous y avez faicte
-      bonne et pertinente et telle que requiert un
-      cas si cruel et inhumain, dont je n'avois voulu
-      faire aucun bruit, ne faire connoistre que j'en
-      sceusse rien jusques à hier, que ledict ambassadeur,
-      ayant demandé audience au Roy monsieur
-      mon fils et a moy, nous vint trouver et
-      aprez plusieurs autres propos qu'il nous tint
-      nous dit qu'il avoit charge de son maistre,
-      monsieur mon beau-fils, nous advertir qu'il
-      estoit arrivé en Espaigne un capitaine pourtant
-      nouvelles que Pierre Ménendez ayant trouve en
-      la terre de la Floride quelques François advouez
-      et chargez des lettres de M. l'Admiral, qui
-      avoint en leur compagnie quelques ministres
-      qui plantoint la la religion nouvelle, il les
-      avoit chastiez, comme il dict en avoir commandement
-      du roy son maistre; bien confessoit-il
-      que ce avoit esté un peu plus rudement et
-      cruellement que sondict maistre n'eust désiré,
-      mais qu'il n'avoit peu moins faire que de
-      leur courir sus comme a pirates et gents qui
-      estoint là pour entreprendre sur ce qui luy
-      appartenoit, disant néantmoins que le roy
-      son maistre demandoit justice dudict Admiral.
-      Le Roy monfils qui estoit encores dedans lelict
-      assez debille pour la maladie qu'il a eüe,
-      dont il est graces à Dieu du tout dehors, voulut
-      que je y fisse responce, qui fut que je
-      l'avoys desjà bien sceu par homme qui nous en
-      estoit revenu, et ne pouvois, comme mère
-      commune, que je n'eusse une douleur incroyable
-      au cceur d'avoir entendu qu'entre
-      princes si amis, alliez et apparentez que sont
-      ces deux roys et en si bonne paix lors et au
-      temps que nous observions envers eux tant et
-      de si grands offices d'amitie, un carnage si
-      horrible eust été commis des subjects du Roy
-      mondict fils, auquel jusques alors, à cause de
-      sa maladie, je n'en avoys pas voulu parler, que
-      j'estois comme hors de moy quand j'y pensois,
-      et ne me pouvois persuader que le roy son
-      maistre ne nous en feit la réparation et justice;
-      car de couvrir cella sur l'adveu dudict
-      Amiral qu'il n'y a pas de quoy, estant bien
-      croyable qu'il n'a pas laissé aller tant de gents
-      hors de ce royaume sans le sceu du Roy
-      mon fils, qui estime que le commerce et la
-      navigation est libre partout à ses subjects, et
-      que ceste terre où le faict s'est commis n'est
-      point à luy, mais de si long temps descouvertc
-      de nos subjects, qu'elle en porte encores le
-      nom, comme il en a esté et ses ministres aussi
-      jà adverti par vous. Et quand bien ils eussent
-      esté dedans les propres païs du roy son
-      maistre, faisants autrement qu'il n'appartenoit
-      entre amis, qu'ils se devoint contenter de les
-      prendre prisonniers et les rendre au Roy mon
-      fils, pour les faire punir, s'ils avoint failli,
-      sans en user ainsi, dont je ne pouvois croire
-      qu'il ne nous rendit contents; qu'il sembloit
-      que l'on voulsist brider le Roy mon fils, l'enfermer
-      en ce royaume, et luy roignerles aisles,
-      chose qu'il ne pourroit et ne seroit aussi conseillé
-      le slufrir, luy apportant par la un argument
-      d'autrement penser et pourvoir à ses
-      affaires, comme il sçaura bien faire, si Dieu
-      plaict et ne iny en delTaillent les moyens, de
-      manière que j'espérois qu'il n'auroit que faire
-      de ses voisins et ne les respecleroit non plus
-      qu'ils font luy; graces à Dieu, que son royaume
-      estait en boine paix et luy mieux obéi qu'il
-      ne fust jamays, par où se pouvoit aisément
-      croire qu'il ne luy sera malaisd de faire connoisfre
-      et sentir à ceux qui lui voudront mal
-      faire qu'il n'a pas moindre moyen de s'en
-      garder que ont eu les Roys ses predecesseurs.
-      Ledict ambassadeur essaioit tousjour de couvrir
-      ce faict sur l'Admiral et qu'il y avoit des
-      ministres de la religion, qui estoit chose fort
-      desplaisante à son maistre ; mais je luy ay dit
-      que nous ne nous sommes pas enquis quelles
-      gents alloint audict voyage et que si c'estoit à
-      souëter, je voudrois que touts les Huguenots
-      fussent en ce pays là, où il ne peut justement
-      dire qu'il ait intérest, puisque la terre est
-      nostre, comme nous la prétendons, nous faisant
-      bien connoistre que l'on ne veut pas guères
-      le repos de ce royaume, puisque l'on nous veut
-      ainsi liter le moyen de l'y mettre. Mais, quoy
-      que ce soit, ce n'est pas à eux de punir noz
-      subjectz et ne disputons point s'ils estoint de
-      ia religion ou non, ains du meurtre qu'ils en
-      ont faict, dont il est bien raisonnable que son
-      maistre fasse faire justice que nous luy en
-      demand«ns, A quoy il m'a semblé que l'ambassadeur
-      a esté bien empesché de respondre,
-      et s'est advancé pour fortifier ses plainctes de
-      nous parler aussi de Corseque, où il dit
-      qu'il va ordinairement de Provence plusieurs
-      barques chargées de vivres, munitions et gents
-      dont les Genevois se plaignoint; à quoy je
-      l'ay très bien satisfaict et dit que ce sont des
-      impostures accostumées. Il m'a parlé aussi de
-      quelques galères qu'il dit que l'on faict armer
-      à Marceille, ce que je luy ay confesse
-      pour garder noz costes infectées, comme elles
-      sont d'infinis coursaires que sa querelle mesme
-      nous y attire et que nous avons doucement
-      supportez pour son respect. Quand tout est
-      dit, il avoit amassé un monde de plainctes pour
-      donner couleur à celle de la Floride, où il y
-      a aussi peu de fondement, mais ce qu'il en a
-      rapporté est qu'il a bien connu que nous l'avons
-      trouvé très mauvais et ne pense pas que nous
-      l'oublions. Ce que j'ay bien voulu vous escripre
-      ainsi au long, de la part du Roy mon
-      fils, vous priant et ordonnant de le faire bien
-      entendre au Roy Catholicque, en le priant très
-      affectueusement qu'il veuille pour le devoir
-      et la raison en faire faire la justice et réparation
-      que mérite un si énorme outrage par
-      démonstration digne de l'amitié et de la bonne
-      paix qui est entre nous, et qu'il considère le
-      tort qu'il y fairoit, s'il ne nous en donne la
-      satisfaction que le Roy mon fils en attend et
-      que j'en désire de ma part; car je ne seray
-      jamais à mon aise ne bien contente jusques
-      a ce que je la voye conforme à la syncérité de
-      noz affections et actions en son endroit, dont
-      il me fascheroit trop que l'on abusast et aurois
-      un merveilleux regret d'avoir perdu tant de
-      peine, de soing et de moyens que j'ay cherchez
-      pour nourrir ces deuxprinces et leurs couronnes
-      en perpetuelleamitié et, qu'au lieu du bien que
-      j'en espérois voir sortir, le Roy mon fils me
-      reprochast un jour que, duraat qu'il s'est
-      reposé sur moy de ses affaires j'aye laissé faire
-      une telie escorne a sa réputation, dont je
-      vous prie que par vostre première despesche je
-      sóis esclaircie, m'assurant que ledict ambassadeur
-      n'oubliera rien à faire sgavoir de ce
-      que je luy en ay dit et du tort qu'ils font au
-      bien que je cherche faire à ce royaume; car
-      a vous dire franchement, je croy que les Huguenots,
-      qui y sont, n'eussent sceu demender
-      une meilleure nouvelle, connoissant par la
-      que l'amitié que nous nous prometons du
-      costé de delà est fort mal assurée, puisque
-      l'on traicte ainsi noz subjects, ce que j'espère
-      que Dieu ne laissera impuni, comme je veux
-      que vous le faictes très bien entendre à la
-      royne ma fille, oultre ce que je luy en escripts
-      et luy monstriez ceste lettre, si elle la veut
-      voir. J'ay au demeurant veu ce que vous
-      m'escripvez du faict des mariages, à quoy je
-      ne pense plus. Le Roy mon fils est assez
-      jeune pour attendre mieux, et si grand prince
-      qu'il ne peut qu'il n'ayt tousjours à choisir en
-      toute la Chrestiente, quelque empeschement
-      que l'on y pense donner, comme je sçay et
-      connois que l'on faict. Priant Dieu, Monsieur
-      de Forquevauls, vous avoir en sa saincte et
-      digne garde.</p>
+    d'Espaigne ait despesché son courrier,
+    est arrivé vostre premier paquet dont nostre
+    autre despesche fait mention, par où j'ay esté
+    bien particulièrement advertie comme est passé
+    ce malheureux massacre faict à la Floride
+    et les propos que vous en a tenus le duc d'Albe
+    avecques la response que vous y avez faicte
+    bonne et pertinente et telle que requiert un
+    cas si cruel et inhumain, dont je n'avois voulu
+    faire aucun bruit, ne faire connoistre que j'en
+    sceusse rien jusques à hier, que ledict ambassadeur,
+    ayant demandé audience au Roy monsieur
+    mon fils et à moy, nous vint trouver et
+    aprez plusieurs autres propos qu'il nous tint
+    nous dit qu'il avoit charge de son maistre,
+    monsieur mon beau-fils, nous advertir qu'il
+    estoit arrivé en Espaigne un capitaine pourtant
+    nouvelles que Pierre Ménendez ayant trouvé en
+    la terre de la Floride quelques François advouez
+    et chargez des lettres de M. l'Admiral, qui
+    avoint en leur compagnie quelques ministres
+    qui plantoint là la religion nouvelle, il les
+    avoit chastiez, comme il dict en avoir commandement
+    du roy son maistre; bien confessoit-il
+    que ce avoit esté un peu plus rudement et
+    cruellement que sondict maistre n'eust désiré,
+    mais qu'il n'avoit peu moins faire que de
+    leur courir sus comme à pirates et gents qui
+    estoint là pour entreprendre sur ce qui luy
+    appartenoit, disant néantmoins que le roy
+    son maistre demandoit justice dudict Admiral.
+    Le Roy monfils qui estoit encores dedans le
+    lict assez débille pour la maladie qu'il a eüe,
+    dont il est graces à Dieu du tout dehors, voulut
+    que je y fisse responce, qui fut que je
+    l'avoys desjà bien sceu par homme qui nous en
+    estoit revenu, et ne pouvois, comme mère
+    commune, que je n'eusse une douleur incroyable
+    au coeur d'avoir entendu qu'entre
+    princes si amis, alliez et apparentez que sont
+    ces deux roys et en si bonne paix lors et au
+    temps que nous observions envers eux tant et
+    de si grands offices d'amitie, un carnage si
+    horrible eust été commis des subjects du Roy
+    mondict fils, auquel jusques alors, à cause de
+    sa maladie, je n'en avoys pas voulu parler, que
+    j'estois comme hors de moy quand j'y pensois,
+    et ne me pouvois persuader que le roy son
+    maistre ne nous en feit la réparation et justice;
+    car de couvrir cella sur l'adveu dudict
+    Amiral qu'il n'y a pas de quoy, estant bien
+    croyable qu'il n'a pas laissé aller tant de gents
+    hors de ce royaume sans le sceu du Roy
+    mon fils, qui estime que le commerce et la
+    navigation est libre partout à ses subjects, et
+    que ceste terre où le faict s'est commis n'est
+    point à luy, mais de si long temps descouverte
+    de nos subjects, qu'elle en porte encores le
+    nom, comme il en a esté et ses ministres aussi
+    jà adverti par vous. Et quand bien ils eussent
+    esté dedans les propres païs du roy son
+    maistre, faisants autrement qu'il n'appartenoit
+    entre amis, qu'ils se devoint contenter de les
+    prendre prisonniers et les rendre au Roy mon
+    fils, pour les faire punir, s'ils avoint failli,
+    sans en user ainsi, dont je ne pouvois croire
+    qu'il ne nous rendit contents; qu'il sembloit
+    que l'on voulsist brider le Roy mon fils, l'enfermer
+    en ce royaume, et luy roigner les aisles,
+    chose qu'il ne pourroit et ne seroit aussi conseillé
+    le soufrir, luy apportant par la un argument
+    d'autrement penser et pourvoir à ses
+    affaires, comme il sçaura bien faire, si Dieu
+    plaict et ne luy en deffaillent les moyens, de
+    manière que j'espérois qu'il n'auroit que faire
+    de ses voisins et ne les respecteroit non plus
+    qu'ils font luy; graces à Dieu, que son royaume
+    estoit en bonne paix et luy mieux obéi qu'il
+    ne fust jamays, par où se pouvoit aisément
+    croire qu'il ne luy sera malaisé de faire connoistre
+    et sentir à ceux qui lui voudront mal
+    faire qu'il n'a pas moindre moyen de s'en
+    garder que ont eu les Roys ses predecesseurs.
+    Ledict ambassadeur essaioit tousjour de couvrir
+    ce faict sur l'Admiral et qu'il y avoit des
+    ministres de la religion, qui estoit chose fort
+    desplaisante à son maistre ; mais je luy ay dit
+    que nous ne nous sommes pas enquis quelles
+    gents alloint audict voyage et que si c'estoit à
+    souëter, je voudrois que touts les Huguenots
+    fussent en ce pays là, où il ne peut justement
+    dire qu'il ait intérest, puisque la terre est
+    nostre, comme nous la prétendons, nous faisant
+    bien connoistre que l'on ne veut pas guères
+    le repos de ce royaume, puisque l'on nous veut
+    ainsi oster le moyen de l'y mettre. Mais, quoy
+    que ce soit, ce n'est pas à eux de punir noz
+    subjectz et ne disputons point s'ils estoint de
+    ia religion ou non, ains du meurtre qu'ils en
+    ont faict, dont il est bien raisonnable que son
+    maistre fasse faire justice que nous luy en
+    demandons. A quoy il m'a semblé que l'ambassadeur
+    a esté bien empesché de respondre,
+    et s'est advancé pour fortifier ses plainctes de
+    nous parler aussi de Corseque, où il dit
+    qu'il va ordinairement de Provence plusieurs
+    barques chargées de vivres, munitions et gents
+    dont les Genevois se plaignoint; à quoy je
+    l'ay très bien satisfaict et dit que ce sont des
+    impostures accostumées. Il m'a parlé aussi de
+    quelques galères qu'il dit que l'on faict armer
+    à Marceille, ce que je luy ay confessé
+    pour garder noz costes infectées, comme elles
+    sont d'infinis coursaires que sa querelle mesme
+    nous y attire et que nous avons doucement
+    supportez pour son respect. Quand tout est
+    dit, il avoit amassé un monde de plainctes pour
+    donner couleur à celle de la Floride, où il y
+    a aussi peu de fondement, mais ce qu'il en a
+    rapporté est qu'il a bien connu que nous l'avons
+    trouvé très mauvais et ne pense pas que nous
+    l'oublions. Ce que j'ay bien voulu vous escripre
+    ainsi au long, de la part du Roy mon
+    fils, vous priant et ordonnant de le faire bien
+    entendre au Roy Catholicque, en le priant très
+    affectueusement qu'il veuille pour le devoir
+    et la raison en faire faire la justice et réparation
+    que mérite un si énorme outrage par
+    démonstration digne de l'amitié et de la bonne
+    paix qui est entre nous, et qu'il considère le
+    tort qu'il y fairoit, s'il ne nous en donne la
+    satisfaction que le Roy mon fils en attend et
+    que j'en désire de ma part; car je ne seray
+    jamais à mon aise ne bien contente jusques
+    a ce que je la voye conforme à la syncérité de
+    noz affections et actions en son endroit, dont
+    il me fascheroit trop que l'on abusast et aurois
+    un merveilleux regret d'avoir perdu tant de
+    peine, de soing et de moyens que j'ay cherchez
+    pour nourrir ces deux princes et leurs couronnes
+    en perpetuelle amitié et, qu'au lieu du bien que
+    j'en espérois voir sortir, le Roy mon fils me
+    reprochast un jour que, durant qu'il s'est
+    reposé sur moy de ses affaires j'aye laissé faire
+    une telle escorne a sa réputation, dont je
+    vous prie que par vostre première despesche je
+    sois esclaircie, m'assurant que ledict ambassadeur
+    n'oubliera rien à faire sçavoir de ce
+    que je luy en ay dit et du tort qu'ils font au
+    bien que je cherche faire à ce royaume; car
+    à vous dire franchement, je croy que les Huguenots,
+    qui y sont, n'eussent sceu demender
+    une meilleure nouvelle, connoissant par la
+    que l'amitié que nous nous prometons du
+    costé de delà est fort mal assurée, puisque
+    l'on traicte ainsi noz subjects, ce que j'espère
+    que Dieu ne laissera impuni, comme je veux
+    que vous le faictes très bien entendre à la
+    royne ma fille, oultre ce que je luy en escripts
+    et luy monstriez ceste lettre, si elle la veut
+    voir. J'ay au demeurant veu ce que vous
+    m'escripvez du faict des mariages, à quoy je
+    ne pense plus. Le Roy mon fils est assez
+    jeune pour attendre mieux, et si grand prince
+    qu'il ne peut qu'il n'ayt tousjours à choisir en
+    toute la Chrestiente, quelque empeschement
+    que l'on y pense donner, comme je sçay et
+    connois que l'on faict. Priant Dieu, Monsieur
+    de Forquevauls, vous avoir en sa saincte et
+    digne garde.</p>
     <p>Escript à Molins, le XVIIe jour de mars
       1566.</p>
     <p> <hi style="font-variant: small-caps">Caterine</hi>.</p>
