:bento: (lettres) id
640311.LCM02.FONT -> 640311.LCM02.FONT.b

--- a/lettres.html
+++ b/lettres.html
@@ -1071,7 +1071,7 @@
     </discours>
     
     
-    </article><article><h2 id='640311.LCM02.FONT'>Lettre n° 640311.LCM02.FONT<a href="https://beatricemundo.github.io/lettresmedicis6466/#640311.LCM02.FONT">↑</a></h2><discours loc="CathMed" id="640311.LCM02.FONT" date="1564—11mars">
+    </article><article><h2 id='640311.LCM02.FONT.b'>Lettre n° 640311.LCM02.FONT.b<a href="https://beatricemundo.github.io/lettresmedicis6466/#640311.LCM02.FONT.b">↑</a></h2><discours loc="CathMed" id="640311.LCM02.FONT.b" date="1564—11mars">
       <p> Monsieur de Tavanes, je ne vous feray poinct de redicte de ce que le Roy monsieur mon filz vous escript, mais je vous prieray bien de donner si bon ordre sur ceste réduction de la bende de Forsetz que les soldatz qui seront licentiez ne fa cent pas comme beaucoup d'aultres qui s'estans rassemblez ont faict beaucoup de désordre par où ilz ont passé ; et par ce je vous prie leur mectre de si bons prévostz à leur queue que, s'il y en a ung qui face la moindre pillerye que ce soyt, il soyt chastié sur le champ. Vous sçavez comme telles choses se manient et y sçaurez si bien pourveoir qu'il ne fault poinct que je me travaille à vous en riens mander de ma part. Pryant Dieu, Monsieur de Tavanes, qu'il vous ait en sa saincte garde. Escript à Fontainebleau, le XIe jour de mars 1563 (1564).</p>
       <p> <hi style="font-variant: small-caps">Caterine</hi>.</p>
       <p> <hi style="font-variant: small-caps">Bourdin</hi>.  </p>
