:bento: (lettres) OCR
640227.LCM10.SL

--- a/lettres.html
+++ b/lettres.html
@@ -556,14 +556,14 @@
       quelle sera sa reponse, je ne faudrai de le
       vous mander, pour en faire part à mondict
       bon frere.</p>
-      <p>Roy Monsieur mon filz a faict voir, de-
-      puis l'arrivée de mon cousin le cardinal de
+    <p>Le Roy Monsieur mon filz a faict voir, depuis
+      l'arrivée de mon cousin le cardinal de
       Lorraine, les decretz dudict concile en pleine
       compagnie de son Conseil, appeliez les quatre
       presidens de sa cour de parlement et ses advocat
       et procureur général, par l'advis desquelz
-      il s'est trouvé tant de choses contrai-
-      res à son authorité et préjudiciables aux privilèges
+      il s'est trouvé tant de choses contraires
+      à son authorité et préjudiciables aux privilèges
       et libertez de l'Eglise gallicane, qu'il
       a esté advisé et resolu que la chose se surseoira
       encore pour quelque temps.</p>
