:bento: (lettres) OCR
640229.LCM10.FONT

--- a/lettres.html
+++ b/lettres.html
@@ -945,7 +945,30 @@
     
     
     </article><article><h2 id='640229.LCM10.FONT'>Lettre n° 640229.LCM10.FONT<a href="https://beatricemundo.github.io/lettresmedicis6466/#640229.LCM10.FONT">↑</a></h2><discours loc="CathMed" id="640229.LCM10.FONT" date="156429février">
-      <p> Monsr de Maugiron, aiant Montbrun faict entendre au Roy, monsieur mon filz, et à moy, combien il vous est nécessaire de faire ung tour par deçà, affin de donner ordre à certains voz affaires qui vous y sont de grande importance, nous vous avons bien voullu pour ce accorder vostre congé, encores que vostre presence en Dauphiné y soyt plus requise en ce temps-cy que en ung aultre, pour y contenir en ce commancement les choses au bon chemyn de repoz, unyon e transquilité qu'ellesont prinses, esperant neantmoingsque vostre voyaige ne sera sy long, et que vous layerez les affaires de ce costà là, avant que d'en partir, en sy bon estât et en sy bonnes mains, qu'il n'en adviendra pour vostre absence aucun inconvénient; joinct que nous escripvons présentement à mon cousin le mareschal de Vieilleville qu'il y tourne ung peu les yeulx,ainsy que vous dira plus amplement de nostre part ledict Montbrun. Priant Dieu vous donner, Monsr de Maugiron, ce que desirez. Escript à Fontainebleau,le dernier jour de febvrier 1563 ( 156^:).</p>
+      <p> Monsr de Maugiron, aiant Montbrun faict
+        entendre au Roy, monsieur mon filz, et à
+        moy, combien il vous est nécessaire de faire
+        ung tour par deçà, affin de donner ordre à
+        certains voz affaires qui vous y sont de grande
+        importance, nous vous avons bien voullu pour
+        ce accorder vostre congé, encores que vostre
+        presence en Dauphiné y soyt plus requise
+        en ce temps-cy que en ung aultre, pour y
+        contenir en ce commancement les choses au
+        bon chemyn de repoz, unyon e transquilité
+        qu'ellesont prinses, esperant neantmoingsque
+        vostre voyaige ne sera sy long, et que vous layerez
+        les affaires de ce costà là, avant que d'en
+        partir, en sy bon estât et en sy bonnes mains,
+        qu'il n'en adviendra pour vostre absence aucun
+        inconvénient; joinct que nous escripvons
+        présentement à mon cousin le mareschal
+        de Vieilleville qu'il y tourne ung peu les
+        yeulx,ainsy que vous dira plus amplement de
+        nostre part ledict Montbrun. Priant Dieu vous
+        donner, Monsr de Maugiron, ce que desirez.
+        Escript à Fontainebleau,le dernier jour de
+        febvrier 1563 (1564).</p>
       <p> <hi style="font-variant: small-caps">Robertet</hi>.</p>
       <p> <hi style="font-variant: small-caps">Caterine</hi>.  </p>
     </discours>
