:bento: (lettres) OCR
640414.LCM02.TROY.a

--- a/lettres.html
+++ b/lettres.html
@@ -1467,7 +1467,18 @@
     
     
     </article><article><h2 id='640414.LCM02.TROY.a'>Lettre n° 640414.LCM02.TROY.a<a href="https://beatricemundo.github.io/lettresmedicis6466/#640414.LCM02.TROY.a">↑</a></h2><discours loc="CathMed" id="640414.LCM02.TROY.a" date="1564-14avril">
-      <p> Mon cousin, s'en allant à Paris le sieur de Trockmorton 1, qui a esté l'un des principaulx ministres de la paix, je désire, comme il est bien raisonnable, qu'il soit honnestement traicté et caressé, et à ceste cause je vous prie l'aller visiter et dire au prévost des marchans et eschevins de la ville qu'ilz luy facent pré- sent et aultres honnestetez que l'on a accous- tumé de faire à personnes que l'on veult ca- resser. Priant Dieu, mon cousin, qu'il vous ayt en sa saincte garde. Escript à Troyes, le xime jour d'avril i56/i.</p>
+      <p>Mon cousin, s'en allant à Paris le sieur de
+        Trockmorton, qui a esté l'un des principaulx
+        ministres de la paix, je désire, comme il est
+        bien raisonnable, qu'il soit honnestement
+        traicté et caressé, et à ceste cause je vous prie
+        l'aller visiter et dire au prévost des marchans
+        et eschevins de la ville qu'ilz luy facent présent
+        et aultres honnestetez que l'on a accoustumé
+        de faire à personnes que l'on veult ca-
+        resser. Priant Dieu, mon cousin, qu'il vous ayt
+        en sa saincte garde. Escript à Troyes, le XIIIIe
+        jour d'avril 1564.</p>
       <p> Vostre bonne cousine,</p>
       <p> <hi style="font-variant: small-caps">Caterine</hi>.  </p>
     </discours>
