:bento: (lettres) OCR
650105.LCM02.MONT

--- a/lettres.html
+++ b/lettres.html
@@ -3293,7 +3293,32 @@
     
     
     </article><article><h2 id='650105.LCM02.MONT'>Lettre n° 650105.LCM02.MONT<a href="https://beatricemundo.github.io/lettresmedicis6466/#650105.LCM02.MONT">↑</a></h2><discours loc="CathMed" id="650105.LCM02.MONT" date="1565—5janvier">
-      <p> Mon cousin, je m'asseure que suivant ce que je vous ay dernièrement escript Lien au long de ma main, vous aurez pourveu à l'in- solence de Ruzé et à la folle entreprise du prévost Duboys 1; que depuis aussi ayant sceu comme le sr de Longjumeau2 s'est desbordé en la Court de Parlement, toutes choses mal à propos et contraires au repoz que nous cherchons de mectre par tout et mesme à la transquillité en laquelle le Roy monsieur mon filz et moy désirons que vive Paris, vous y aurez mis le remedde nécessaire. Toutesfois pour sçavoir qui a meu ledict sr de Longju- meau à ceste poursuitte et luy faire aussi la raison où sa plaincte le requerra, le Roy monsieur mon filz veult qu'il vienne icy, ainsi qu'il vous escript. En quoy je vous prye donner ordre de le satisffaire et tenir main que es choses qui deppendent de la justice et de son auctorité elle soit respectée, comme il appartient, comme ung des membres princi- paulx du soustien de ceste couronne; car vous ne luy sçauriez ny à moy faire service plus agréable. Pryant Dieu, mon cousin, vous donner ce que désirez. De Narbonne, le cin- quiesme jour de janvier 156lt (1565).</p>
+      <p>Mon cousin, je m'asseure que suivant ce
+        que je vous ay dernièrement escript bien au
+        long de ma main, vous aurez pourveu à l'insolence
+        de Ruzé et à la folle entreprise du
+        prévost Duboys; que depuis aussi ayant sceu
+        comme le sr de Longjumeau s'est desbordé
+        en la Court de Parlement, toutes choses mal
+        à propos et contraires au repoz que nous
+        cherchons de mectre par tout et mesme à la
+        transquillité en laquelle le Roy monsieur mon
+        filz et moy désirons que vive Paris, vous y
+        aurez mis le remedde nécessaire. Toutesfois
+        pour sçavoir qui a meu ledict sr de Longjumeau
+        à ceste poursuitte et luy faire aussi la
+        raison où sa plaincte le requerra, le Roy
+        monsieur mon filz veult qu'il vienne icy,
+        ainsi qu'il vous escript. En quoy je vous prye
+        donner ordre de le satisffaire et tenir main
+        que es choses qui deppendent de la justice et
+        de son auctorité elle soit respectée, comme il
+        appartient, comme ung des membres principaulx
+        du soustien de ceste couronne; car vous
+        ne luy sçauriez ny à moy faire service plus
+        agréable. Pryant Dieu, mon cousin, vous
+        donner ce que désirez. De Narbonne, le cinquiesme
+        jour de janvier 1564 (1565).</p>
       <p> Vostre bonne cousine,</p>
       <p> <hi style="font-variant: small-caps">Caterine</hi>.  </p>
     </discours>
