:bento: (lettres) OCR
650110.LCM02.NARB.a

--- a/lettres.html
+++ b/lettres.html
@@ -3348,8 +3348,31 @@
     
     
     </article><article><h2 id='650110.LCM02.NARB.a'>Lettre n° 650110.LCM02.NARB.a<a href="https://beatricemundo.github.io/lettresmedicis6466/#650110.LCM02.NARB.a">↑</a></h2><discours loc="CathMed" id="650110.LCM02.NARB.a" date="1565—10janvier">
-      <p> Très haute et très excellente princesse, nostre très chère et très amée seur et cousine, le dommage que Pierre Assuyat et aultres marchans subjects du Roy nostre très cher sei- gneur et filz ont receu pour la perte d'ung navire nommé la Marye, de Fescamp, qui a esté déprédé par aulcuns de vos subjetz, est si grand que nous avons très grande occasion de désirer qu'il en soit faict bonne justice et raison qu'ilz en attendent, vous priant, à ceste cause, bien affectueusement d'ordonner à voz officiers qu'il soit promptement procédé au jùgement et deffinition du procès pendant par delà pour raison d'icelle déprédation, ayant le bon droit dudict Assuyat et ses consors en telle recommandation de justice que la raison et l'équité le veulent, comme de deçà nous - pourvoirons tousjours à faire satisfaire vos subjetz en semblables choses et aultres raison- nables, dont nous serons requis et nous ferez, oultre cela, un singulier plaisir, priant à tant Dieu, très haute et très excellente prin- cesse, qu'il vous ait en sa très saincte et digne garde. Escript à Narbonne 1, le xe jour de jan- vier 156Zi (1565).</p>
-      <p> - Vostre bonne seur et cousine,</p>
+      <p>Très haute et très excellente princesse,
+        nostre très chère et très amée seur et cousine,
+        le dommage que Pierre Assuyat et aultres
+        marchans subjects du Roy nostre très cher seigneur
+        et filz ont receu pour la perte d'ung
+        navire nommé la Marye, de Fescamp, qui a esté
+        déprédé par aulcuns de vos subjetz, est si
+        grand que nous avons très grande occasion de
+        désirer qu'il en soit faict bonne justice
+        et raison qu'ilz en attendent, vous priant, à ceste
+        cause, bien affectueusement d'ordonner à voz
+        officiers qu'il soit promptement procédé au
+        jùgement et deffinition du procès pendant par
+        delà pour raison d'icelle déprédation, ayant
+        le bon droit dudict Assuyat et ses consors en
+        telle recommandation de justice que la raison
+        et l'équité le veulent, comme de deçà nous
+        pourvoirons tousjours à faire satisfaire vos
+        subjetz en semblables choses et aultres raisonnables,
+        dont nous serons requis et nous ferez,
+        oultre cela, un singulier plaisir, priant à
+        tant Dieu, très haute et très excellente princesse,
+        qu'il vous ait en sa très saincte et digne
+        garde. Escript à Narbonne, le Xe jour de janvier 1564 (1565).</p>
+      <p> Vostre bonne seur et cousine,</p>
       <p> <hi style="font-variant: small-caps">Caterine</hi>.</p>
       <p> <hi style="font-variant: small-caps">De L'Aubespine.</hi></p>
     </discours>
