:bento: (lettres) OCR
650202.LCM02M.TOUL

--- a/lettres.html
+++ b/lettres.html
@@ -3717,7 +3717,30 @@
     
     
     </article><article><h2 id='650202.LCM02M.TOUL.b'>Lettre n° 650202.LCM02M.TOUL.b<a href="https://beatricemundo.github.io/lettresmedicis6466/#650202.LCM02M.TOUL.b">↑</a></h2><discours loc="CathMed" id="650202.LCM02M.TOUL.b" date="1565-2février">
-      <p> Mon cousin, pour ce que je m'asseure que vous avez plaisir de tout ce qui m'est agréable, j'ay bien voulu vous avertir que le roy catho- licque monsieur mon beau-filz a donné congé à ma fille la royne catholicque sa femme de me venir veoir à Bayonne ce moys d'avril pro- chain, chose que j'avois grandement désirée, et en plaindray encores moings mes peines d'un sy long voiaige, puisqu'il donnera au Roy monsieur mon fils et à moy ceste consolation; et affin que nous ayons moyen de mieulx la recepvoir, je faiz venir de Paris quelques meu- bles précieux et ung buffet de vaisselle que je ne vouldroys pas y estre conduitz sans grande seureté; qui me faict vous pryer bailler quinze ou vingt hommes pour accompaigner l'abbé du Jard et les gens de Marcel1 et gardes des meubles qui conduisent les choses dessusdites pour venir avecques eulx jusques à Bayonne; en manière que lesdictes choses puissent estre là apportées sans aucun danger. Pryant Dieu, mon cousin, vous donner ce que désirez. Es- cript à Thoulouse, le ne jour de febvrier 1564 (1565).</p>
+      <p>Mon cousin, pour ce que je m'asseure que
+        vous avez plaisir de tout ce qui m'est agréable,
+        j'ay bien voulu vous avertir que le roy catholicque
+        monsieur mon beau-filz a donné congé
+        à ma fille la royne catholicque sa femme de
+        me venir veoir à Bayonne ce moys d'avril prochain,
+        chose que j'avois grandement désirée,
+        et en plaindray encores moings mes peines
+        d'un sy long voiaige, puisqu'il donnera au Roy
+        monsieur mon fils et à moy ceste consolation;
+        et affin que nous ayons moyen de mieulx la
+        recepvoir, je faiz venir de Paris quelques meubles
+        précieux et ung buffet de vaisselle que je
+        ne vouldroys pas y estre conduitz sans grande
+        seureté; qui me faict vous pryer bailler quinze
+        ou vingt hommes pour accompaigner l'abbé
+        du Jard et les gens de Marcel1 et gardes des
+        meubles qui conduisent les choses dessusdites
+        pour venir avecques eulx jusques à Bayonne;
+        en manière que lesdictes choses puissent estre
+        là apportées sans aucun danger. Pryant Dieu,
+        mon cousin, vous donner ce que désirez. Escript
+        à Thoulouse, le IIe jour de febvrier 1564
+        (1565).</p>
       <p> Vostre bonne cousine,</p>
       <p> <hi style="font-variant: small-caps">Caterine</hi>.  </p>
     </discours>
