:bento: (lettres) OCR
650202.LCM02.TOUL.c

--- a/lettres.html
+++ b/lettres.html
@@ -3703,8 +3703,40 @@
     
     
     </article><article><h2 id='650202.LCM02.TOUL.c'>Lettre n° 650202.LCM02.TOUL.c<a href="https://beatricemundo.github.io/lettresmedicis6466/#650202.LCM02.TOUL.c">↑</a></h2><discours loc="CathMed" id="650202.LCM02.TOUL.c" date="1565-2février">
-      <p> Mon cousin, ce porteur sera précurseur du sieur de Gonnort que le Roy monsieur mon filz vous envoye pour entendre plus particulliè- rement toutes choses et sur ce amplement instruict de son intention, ce que actendant, le plus grand et plus agréable service que vous sçauriez faire au Roy mon filz, ainsy qu'il vous escript, est de nettoyer à Paris et renvoyer ceulx qui n'en sont et n'y servent de ryens en leurs maisons1, comme je veulx croire que vous avez desjà faict avant la réception de ceste lettre, cognoissant qu'il le veult et entend ainsy pour son contantement et le repoz du royaume; qui est tout ce que j'ay à vous dire, priant Dieu, mon cousin, vous avoir en sa garde. Escript a Thoulouse, le n'jour defebvrier 1564( 1565).</p>
-      <p> (De sa main.) Mon cousin, j'é entendu par set pourteur corne touttes chauses sont pasaye et loue Dieu de set que Paris ayst en pays et pour l'y meyntenir je vous prie que fasié en- nalé tout seulx qui sont veneus1 et vous aseurer que ne sarié fayre heun plus grent servise au Roy mon fils, ny plus grent plèsir à selle qui a tousjour trop coneu vostre afection pour panser que n'ayé le servise du Roy mon filz davent touttes chauses; qui me fayst aseurer que les premières novelles que auron sera que Paris n'aura plus que ses habitans et les play- dieulx2 avecques leur petit trayn. Au reste je vous prie que, set vostre famme n'est grose, me l'anvoyer, afin qu'el aye sa part de la joie de voyr ha Bayonne la royne ma fille, à qui le roy son mari ha donné congé de me venir voyr jeuques dan Bayonne.</p>
+      <p>Mon cousin, ce porteur sera précurseur du
+        sieur de Gonnort que le Roy monsieur mon
+        filz vous envoye pour entendre plus particullièrement
+        toutes choses et sur ce amplement
+        instruict de son intention, ce que actendant,
+        le plus grand et plus agréable service que vous
+        sçauriez faire au Roy mon filz, ainsy qu'il vous
+        escript, est de nettoyer à Paris et renvoyer
+        ceulx qui n'en sont et n'y servent de ryens en
+        leurs maisons, comme je veulx croire que vous
+        avez desjà faict avant la réception de ceste lettre,
+        cognoissant qu'il le veult et entend ainsy pour
+        son contantement et le repoz du royaume; qui
+        est tout ce que j'ay à vous dire, priant Dieu,
+        mon cousin, vous avoir en sa garde. Escript a
+        Thoulouse, le IIe jour de febvrier 1564 (1565).</p>
+      <p>(De sa main.) Mon cousin, j'é entendu par
+        set pourteur come touttes chauses sont pasaye
+        et loue Dieu de set que Paris ayst en pays et
+        pour l'y meyntenir je vous prie que fasié en-
+        nalé tout seulx qui sont veneus et vous aseurer
+        que ne sarié fayre heun plus grent servise au
+        Roy mon fils, ny plus grent plèsir à selle qui
+        a tousjour trop coneu vostre afection pour
+        panser que n'ayé le servise du Roy mon filz
+        davent touttes chauses; qui me fayst aseurer
+        que les premières novelles que auron sera que
+        Paris n'aura plus que ses habitans et les playdieulx
+        avecques leur petit trayn. Au reste je
+        vous prie que, set vostre famme n'est grose,
+        me l'anvoyer, afin qu'el aye sa part de la joie
+        de voyr ha Bayonne la royne ma fille, à qui le
+        roy son mari ha donné congé de me venir voyr
+        jeuques dan Bayonne.</p>
       <p> Vostre bonne cousine,</p>
       <p> <hi style="font-variant: small-caps">Caterine</hi>.  </p>
     </discours>
